--- a/Activity_Module/Index.html
+++ b/Activity_Module/Index.html
@@ -15,7 +15,7 @@
       <img src="../images/logo.png" alt="Logo" id="Logo">
       <ul>
         <li><a href="">HOME</a></li>
-        <li><a href="">HOME</a></li>
+        <li><a href="">HOUSE</a></li>
         <li><a href="">BULLETIN</a></li>
         <li><a href="">RESULTS</a></li>
         <li><a href="">SHOWCASE</a></li>
