--- a/Activity_Module/Gallery.html
+++ b/Activity_Module/Gallery.html
@@ -21,7 +21,7 @@
         </div>
         <ul class="navlinks">
           <li><a href="../index.html"> <img src="../images/logo-color-raster-500x500.png" alt="Logo"></a></li>
-          <li><a href="index.html">HOME</a></li>
+          <li><a href="Index.html">HOME</a></li>
           <li><a href="">HOUSE</a></li>
           <li><a href="">BULLETIN</a></li>
           <li><a href="">RESULTS</a></li>
